# tempo_worklog_automation

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  worklogs_automation.py
tempo_worklog_automation/: __init__.py  __main__.py  conftest.py  settings.py
tempo_worklog_automation/client/: __init__.py  models.py
tempo_worklog_automation/client/utils/: arguments.py  csv.py  log.py  yaml.py
tempo_worklog_automation/src/: math.py  models.py
tempo_worklog_automation/tests/: __init__.py  test_api_calls.py  test_csv_operations.py  test_math_tests.py  test_worklog_operations.py  test_worklogs_model_validation.py  test_yaml_operations.py
tempo_worklog_automation/tests/resources/: random_sample_worklogs.csv  test_yaml_file.yaml  valid_worklogs.csv  valid_worklogs.yaml
